apps/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  selector:
    app: glance
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: glance-k8s
  namespace: glance
spec:
  selector:
    app: glance-k8s
  ports:
    - name: http
      port: 8080
      targetPort: http
