apps/glance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
  annotations:
    external-dns.alpha.kubernetes.io/target: node.${DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: mini.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  name: http
